<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:clipChildren="true"
    android:gravity="top|center"
    android:orientation="vertical" >

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <TextView
        android:id="@+id/detTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:gravity="top|center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="6dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/featuredImage"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:autoLink="all" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="24dp" >

                <Button
                    android:id="@+id/readMore"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@drawable/btbg"
                    android:drawableTop="@drawable/ic_action_readmore"
                    android:gravity="bottom|center_horizontal"
                    android:hapticFeedbackEnabled="true"
                    android:padding="10dip"
                    android:text="@string/read_more" />

                <Button
                    android:id="@+id/storeCal"
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:background="@drawable/btbg"
                    android:drawableTop="@drawable/ic_action_insertcal"
                    android:gravity="bottom|center_horizontal"
                    android:hapticFeedbackEnabled="true"
                    android:padding="10dip"
                    android:text="@string/storecal" />

                <Button
                    android:id="@+id/share"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@drawable/btbg"
                    android:drawableTop="@drawable/ic_action_share"
                    android:gravity="bottom|center_horizontal"
                    android:hapticFeedbackEnabled="true"
                    android:padding="10dip"
                    android:text="@string/share" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>